syntax = "proto3";

import "apps/socialnetwork/proto/post.proto";

option go_package = "sigmaos/apps/socialnetwork/proto";

service TimelineService {
	rpc WriteTimeline(WriteTimelineReq) returns (WriteTimelineRep);
	rpc ReadTimeline(ReadTimelineReq) returns (ReadTimelineRep);
}

service HomeService {
	rpc WriteHomeTimeline(WriteHomeTimelineReq) returns (WriteTimelineRep);
	rpc ReadHomeTimeline(ReadTimelineReq) returns (ReadTimelineRep);
}

message WriteTimelineReq {
	int64 userid = 1;
	int64 postid = 2;
	int64 timestamp = 3;
}

message WriteHomeTimelineReq {
	int64          userid = 1;
	int64          postid = 2;
	int64          timestamp = 3;
	repeated int64 usermentionids = 4;
}

message WriteTimelineRep {
	string ok = 1;
}

message ReadTimelineReq {
	int64 userid = 1;
	int32 start = 2;
	int32 stop = 3;
}

message ReadTimelineRep {
	string   ok = 1;
	repeated Post posts = 2;
}

